src/objects/vlocity_ins__Formulary__c.object
<CustomObject>
    <description>A collection of generic and brand name prescription drugs in most therapeutic categories that offer the greatest overall value and are covered by a specific health care plan.</description>
    <fields>
        <fullName>vlocity_ins__ApprovedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The approver of the Formulary.</description>
        <inlineHelpText>The approver of the Formulary.</inlineHelpText>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Formularies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ApprovedDate__c</fullName>
        <description>The date the Formulary was approved.</description>
        <inlineHelpText>The date the Formulary was approved.</inlineHelpText>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <description>The long description related to the Formulary.</description>
        <inlineHelpText>The long description related to the Formulary.</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveEndDate__c</fullName>
        <description>The date the Formulary is no longer open for selection.</description>
        <inlineHelpText>The date the Formulary is no longer open for selection.</inlineHelpText>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveStartDate__c</fullName>
        <description>The date the Formulary is effective for selection.</description>
        <inlineHelpText>The date the Formulary is effective for selection.</inlineHelpText>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates if the current Formulary is active.</description>
        <inlineHelpText>Designates if the current Formulary is active.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsLocationDependent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates if the current Formulary is location dependent.</description>
        <inlineHelpText>Designates if the current Formulary is location dependent.</inlineHelpText>
        <label>Location Dependent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LineOfBusiness__c</fullName>
        <label>Line Of Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Group Dental</fullName>
                </value>
                <value>
                    <fullName>Group Medical</fullName>
                </value>
                <value>
                    <fullName>Group Vision</fullName>
                </value>
                <value>
                    <fullName>Individual Dental</fullName>
                </value>
                <value>
                    <fullName>Individual Medical</fullName>
                </value>
                <value>
                    <fullName>Individual Vision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ParentFormulary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A link to the Parent Formulary, allowing for Formulary to be nested.</description>
        <inlineHelpText>A link to the Parent Formulary, allowing for Formulary to be nested.</inlineHelpText>
        <label>Parent Formulary</label>
        <referenceTo>vlocity_ins__Formulary__c</referenceTo>
        <relationshipLabel>Related Formularies</relationshipLabel>
        <relationshipName>Formularies_Child</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RegionAvailability__c</fullName>
        <description>DEPRECATED.</description>
        <label>Availability</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>vlocity_ins__State</valueSetName>
        </valueSet>
    </fields>
    <label>Formulary</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_ins__IsActive__c</columns>
        <columns>vlocity_ins__EffectiveStartDate__c</columns>
        <columns>vlocity_ins__EffectiveEndDate__c</columns>
        <columns>vlocity_ins__IsLocationDependent__c</columns>
        <columns>vlocity_ins__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Formularies</label>
    </listViews>
    <nameField>
        <label>Formulary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Formularies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>